--- a/modules/adc-dxp-rest-api-new/build.gradle
+++ b/modules/adc-dxp-rest-api-new/build.gradle
@@ -29,7 +29,13 @@ dependencies {
 	compileOnly group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
 	compileOnly group: 'com.liferay', name: 'com.liferay.dynamic.data.mapping.api', version: '5.10.0'
 	compileOnly group: 'com.liferay', name: 'com.liferay.dynamic.data.mapping.service', version: '5.0.0'
-	compileOnly group: "com.liferay", name: "com.liferay.petra.sql.dsl.api", version: "3.0.0" // Adjust version
+	compileOnly group: "com.liferay", name: "com.liferay.petra.sql.dsl.api", version: "3.0.0"
+	compileOnly group: 'org.mapstruct', name: 'mapstruct', version: '1.3.1.Final'
+	compileOnly group: "com.liferay", name: "com.liferay.calendar.api", version: "5.2.1"
+	compileOnly group: "com.liferay", name: "com.liferay.calendar.service", version: "5.0.13"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
+
+	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
 }
 
 repositories {
