--- a/modules/adc-dxp-rest-api-new/build.gradle
+++ b/modules/adc-dxp-rest-api-new/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.calendar.api", version: "5.2.1"
 	compileOnly group: "com.liferay", name: "com.liferay.calendar.service", version: "5.0.13"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
+	compileOnly group: "com.liferay", name: "com.liferay.petra.function", version: "5.3.0"
 
 	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
 }
