--- a/modules/adc-dxp-rest-polls/build.gradle
+++ b/modules/adc-dxp-rest-polls/build.gradle
@@ -1,4 +1,10 @@
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "release.dxp.api"
 	compileOnly group: "org.osgi", name: "org.osgi.service.jaxrs"
+	compileOnly group: "com.fasterxml.jackson.jaxrs", name: "jackson-jaxrs-json-provider", version: "2.12.7" // Stable for 7.4 U92
+	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.12.7" // Required by jackson-jaxrs-json-provider
+	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-core", version: "2.12.7" // Required by jackson-databind
+	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.1.0"
+	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
+	compileOnly group: "org.osgi", name: "org.osgi.service.jaxrs", version: "1.0.0"
 }
